2003-10-06  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/mips.c (mips_classify_constant): Only allow UNSPECs
	if TARGET_EXPLICIT_RELOCS.

2003-10-06  Mark Mitchell  <mark@codesourcery.com>

	PR bootstrap/12512
	* Makefile.in (info): Use double-colon rules.
	(dvi): Likewise.
	(generated-manpages): Likewise.
	* configure.in: Do not create lang.info, lang.dvi, or
	lang.generated-manpages hooks.
	* configure: Regenerated.
	* objc/Make-lang.in (objc.info): Remove.
	(objc.dvi): Remove.
	(objc.generated-manpages): Remove.
	* doc/sourcebuild.texi: Update description of info, dvi, and
	generated-manpages hooks.

2003-10-06  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/mips.md: Merge mips16 lw/srl pattern with its splitter.

2003-10-05  Andrew Pinski  <apinski@apple.com>

	* config/darwin.c (machopic_non_lazy_ptr_name): Fix off by one
	errors in memcpy destinations.
	(machopic_stub_name): Likewise.

2003-10-05  Andrew Pinski <apinski@apple.com>

	* config/darwin.c (machopic_non_lazy_ptr_name): 
	Change strcat to memcpy and add length together.
	(machopic_stub_name): Likewise.

2003-10-05  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/linux.h (MD_FALLBACK_FRAME_STATE_FOR): Handle new
	signal trampoline codes.

2003-10-05  Chris Demetriou  <cgd@broadcom.com>

	* config/mips/mips.md (*divsf3): Move description of
	SB-1 F2 erratum from here to...
	(divsf3): Here.  Disable if TARGET_FIX_SB1 is set and
	flag_unsafe_math_optimizations is not.

2003-10-05  Aldy Hernandez  <aldyh@redhat.com>

	* config/rs6000/linuxspe.h: Define TARGET_SPE_ABI, TARGET_SPE,
	TARGET_E500, TARGET_ISEL, and TARGET_FPRS.

2003-10-05  Kazu Hirata  <kazu@cs.umass.edu>

	* c-pretty-print.c: Fix comment typos.
	* c-pretty-print.h: Likewise.
	* calls.c: Likewise.
	* cfgloopmanip.c: Likewise.
	* cgraphunit.c: Likewise.
	* cppfiles.c: Likewise.
	* final.c: Likewise.
	* function.c: Likewise.
	* gcov-io.h: Likewise.
	* gcse.c: Likewise.
	* genoutput.c: Likewise.
	* loop.c: Likewise.